docs/0.17/_sources/api/gammapy.data.Observation.rst.txt
Observation
===========

.. currentmodule:: gammapy.data

.. autoclass:: Observation
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Observation.aeff
      ~Observation.bkg
      ~Observation.edisp
      ~Observation.events
      ~Observation.fixed_pointing_info
      ~Observation.gti
      ~Observation.muoneff
      ~Observation.observation_dead_time_fraction
      ~Observation.observation_live_time_duration
      ~Observation.observation_time_duration
      ~Observation.observatory_earth_location
      ~Observation.pointing_altaz
      ~Observation.pointing_radec
      ~Observation.pointing_zen
      ~Observation.psf
      ~Observation.target_radec
      ~Observation.tstart
      ~Observation.tstop

   .. rubric:: Methods Summary

   .. autosummary::

      ~Observation.check
      ~Observation.create
      ~Observation.from_caldb
      ~Observation.peek
      ~Observation.select_time

   .. rubric:: Attributes Documentation

   .. autoattribute:: aeff
   .. autoattribute:: bkg
   .. autoattribute:: edisp
   .. autoattribute:: events
   .. autoattribute:: fixed_pointing_info
   .. autoattribute:: gti
   .. autoattribute:: muoneff
   .. autoattribute:: observation_dead_time_fraction
   .. autoattribute:: observation_live_time_duration
   .. autoattribute:: observation_time_duration
   .. autoattribute:: observatory_earth_location
   .. autoattribute:: pointing_altaz
   .. autoattribute:: pointing_radec
   .. autoattribute:: pointing_zen
   .. autoattribute:: psf
   .. autoattribute:: target_radec
   .. autoattribute:: tstart
   .. autoattribute:: tstop

   .. rubric:: Methods Documentation

   .. automethod:: check
   .. automethod:: create
   .. automethod:: from_caldb
   .. automethod:: peek
   .. automethod:: select_time
